# stop-detached-thread-sample

./: .gitignore  CMakeLists.txt  README.md
cmake/: GRPCHelper.cmake
docker/: Dockerfile.grpc  Dockerfile.grpc-dev  docker-build.sh  docker-run.sh  entrypoint.sh
protos/: threadctrl.proto
script/: compile_protos.sh  run_new_thread.py  stop_all_threads.py  threadctrl_pb2.py  threadctrl_pb2_grpc.py
src/: CMakeLists.txt  server.cpp  server_detach.cpp  server_join.cpp
